image with video without strips added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <img src="sRGB embed color.jpg" alt="" />
     <img src="sRGB both colorspace.jpg" alt="" /> -->
     <center>
+      <img src="g10pic1.png" alt="" width="480" />
+      <p>
+        Linear Gamma 16 bit PNG image with AllColorsRGB-elle-V4-g10.icc profile
+      </p>
+      <hr />
+      <video src="video1.mp4" controls autoplay></video>
+      <p>Video generated from the image using ffmpeg.wasm</p>
       <!-- <img src="sRGB pic1.jpg" alt="" /> -->
       <!-- <img src="g10.png" alt="" width="300" />
       <p>Linear Gamma PNG</p>
@@ -22,6 +29,7 @@
       <p>
         Linear Gamma JPG convert to sRGB and embed color Profile option selected
       </p> -->
+      <!-- <img src="download.png" alt="" width="960" />
       <h4 style="text-decoration: underline">Linear Gamma</h4>
       <table width="400" border="0" cellspacing="0" cellpadding="0">
         <tbody>
@@ -74,7 +82,7 @@
         </tbody>
       </table>
       <br />
-      <video src="video.mp4" controls autoplay></video>
+      <video src="video.mp4" controls autoplay></video>-->
     </center>
 
     <!-- <script>
