added new video

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         Linear Gamma 16 bit PNG image with AllColorsRGB-elle-V4-g10.icc profile
       </p>
       <hr />
-      <video src="video1.mp4" controls autoplay></video>
-      <p>Video generated from the image using ffmpeg.wasm</p>
+      <video src="video2.mp4" controls autoplay></video>
+      <p>
+        Video generated from the image using ffmpeg.wasm with brightness set to
+        0.185
+      </p>
       <!-- <img src="sRGB pic1.jpg" alt="" /> -->
       <!-- <img src="g10.png" alt="" width="300" />
       <p>Linear Gamma PNG</p>
