--- a/index.html
+++ b/index.html
@@ -1,101 +1,24 @@
 <html>
   <body>
-    <!-- <canvas id="canvas"></canvas> -->
-    <!-- <img src="sRGB.png" alt="" />
-    <img src="sRGB no colorspace.jpg" alt="" />
-    <img src="sRGB embed color.jpg" alt="" />
-    <img src="sRGB both colorspace.jpg" alt="" /> -->
-    <center>
-      <img src="g10pic1.png" alt="" width="480" />
-      <p>
-        Linear Gamma 16 bit PNG image with AllColorsRGB-elle-V4-g10.icc profile
-      </p>
-      <hr />
-      <video src="video2.mp4" controls autoplay></video>
-      <p>
-        Video generated from the image using ffmpeg.wasm with brightness set to
-        0.185
-      </p>
-      <!-- <img src="sRGB pic1.jpg" alt="" /> -->
-      <!-- <img src="g10.png" alt="" width="300" />
-      <p>Linear Gamma PNG</p>
-      <hr />
-      <img src="g10 no colorspace.jpg" alt="" width="300" />
-      <p>Linear Gamma JPG no colorspace option selected while exporting</p>
-      <hr />
-      <img src="g10 embed color.jpg" alt="" width="300" />
-      <p>
-        Linear Gamma JPG embed color Profile option selected while exporting
-      </p>
-      <hr />
-      <img src="g10 both colorspace.jpg" alt="" width="300" />
-      <p>
-        Linear Gamma JPG convert to sRGB and embed color Profile option selected
-      </p> -->
-      <!-- <img src="download.png" alt="" width="960" />
-      <h4 style="text-decoration: underline">Linear Gamma</h4>
-      <table width="400" border="0" cellspacing="0" cellpadding="0">
-        <tbody>
-          <tr align="top">
-            <td align="right">
-              <p align="center">g10 both options ticked.jpg</p>
-              <img src="g10 both colorspace.jpg" width="200" />
-            </td>
-            <td align="left">
-              <p align="center">g10 embed color.jpg</p>
-              <img src="g10 embed color.jpg" width="200" />
-            </td>
-          </tr>
-          <tr>
-            <td align="right">
-              <img src="g10 no colorspace.jpg" width="200" />
-              <p align="center">g10 no colorspace.jpg</p>
-            </td>
-            <td align="left">
-              <img src="g10.png" width="200" />
-              <p align="center">g10.png</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <br />
-      <h4 style="text-decoration: underline">sRGB</h4>
-      <table width="400" border="0" cellspacing="0" cellpadding="0">
-        <tbody>
-          <tr align="top">
-            <td align="right">
-              <p align="center">sRGB both colorspace.jpg</p>
-              <img src="sRGB both colorspace.jpg" width="200" />
-            </td>
-            <td align="left">
-              <p align="center">sRGB embed color.jpg</p>
-              <img src="sRGB embed color.jpg" width="200" />
-            </td>
-          </tr>
-          <tr>
-            <td align="right">
-              <img src="sRGB no colorspace.jpg" width="200" />
-              <p align="center">sRGB no colorspace.jpg</p>
-            </td>
-            <td align="left">
-              <img src="sRGB.png" width="200" />
-              <p align="center">sRGB.png</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <br />
-      <video src="video.mp4" controls autoplay></video>-->
-    </center>
+    <br />
 
-    <!-- <script>
-      var canvas = document.getElementById("canvas");
-      var ctx = canvas.getContext("2d");
-      var img = new Image(); // Create new img element
-      img.onload = function () {
-        ctx.drawImage(img, 0, 0);
-      };
-      img.src = "pic1.png"; // Set source path
-    </script> -->
+    <p>
+      Video generated from 16bit PNG image using FFMPEG with following details:
+    </p>
+    <p>
+      Codecs - libx264 with yuv420p10le format(YUV 4:2:0 planar 10-bits),<br />
+      Color Transfer Characteristic - smpte2084, <br />
+      Color Primaries - bt2020,<br />
+      Color Space - bt2020nc (ITU-R BT2020 non-constant luminance system),<br />
+    </p>
+    <video src="hdr_video.mp4" controls autoplay height="540"></video>
+    <img src="g10pic6.png" height="540" />
+    <br />
+    16 bit PNG image with
+    <a
+      href="https://github.com/ellelstone/elles_icc_profiles/blob/master/profiles/Rec2020-elle-V4-g10.icc"
+      >Rec2020-g10 color profile</a
+    >
+    (Linear gamma)
   </body>
 </html>
